--- a/tasklist-backend/tasklist/pom.xml
+++ b/tasklist-backend/tasklist/pom.xml
@@ -75,6 +75,13 @@
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
+		
+		<!-- to enable CORS -->
+		<dependency>
+		  <groupId>org.apache.httpcomponents</groupId>
+		  <artifactId>httpclient</artifactId>
+		  <scope>test</scope>
+		</dependency>
 			
 	</dependencies>
 
